@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.solace.spring.cloud</groupId>
         <artifactId>solace-spring-cloud-build</artifactId>
-        <version>2.5.2-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -20,11 +20,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
 
-        <solace.jcsmp.version>10.19.0</solace.jcsmp.version>
-        <solace.jms.version>10.19.0</solace.jms.version>
+        <solace.jcsmp.version>10.19.1-jakarta_jms.43138</solace.jcsmp.version>
+        <solace.jms.version>10.19.1-jakarta_jms.43138</solace.jms.version>
     </properties>
 
     <dependencyManagement>
@@ -68,12 +68,6 @@
                 <scope>import</scope>
             </dependency>
 
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-cloud-connectors</artifactId>
-                <version>${spring.cloud.connectors.version}</version>
-            </dependency>
-
             <!--
             Workaround for spring-cloud-dependencies (spring-cloud-gcp-dependencies in particular) overriding this.
             Since we use the flatten plugin, this workaround is only applicable to the tests within this repo
@@ -94,6 +88,11 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
+                        <argLine>
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                        </argLine>
                         <properties>
                             <configurationParameters>
                                 junit.jupiter.execution.parallel.enabled=false
@@ -114,6 +113,11 @@
                                 <goal>verify</goal>
                             </goals>
                             <configuration>
+                                <argLine>
+                                    --add-opens java.base/java.lang=ALL-UNNAMED
+                                    --add-opens java.base/java.util=ALL-UNNAMED
+                                    --add-opens java.base/java.net=ALL-UNNAMED
+                                </argLine>
                                 <properties>
                                     <configurationParameters>
                                         junit.jupiter.execution.parallel.enabled=false
